--- a/src/index.scss
+++ b/src/index.scss
@@ -20,11 +20,37 @@ button {
 input {
   outline: none;
 }
+.App{
+  min-width: 100%;
+}
 .header {
+  width: 100%;
   padding: 27px 35px 28px 41px;
   display: flex;
   justify-content: space-between;
   background-color: #e4b062;
+  &__logo {
+    width: 273px;
+    height: 63px;
+    background-size: cover;
+    background-image: url("./images/logo.png");
+  }
+  &__controls {
+    display: flex;
+    align-items: center;
+  }
+  &__exit-button {
+    height: 64px;
+  }
+  &__username {
+    display: flex;
+    align-items: center;
+    text-transform: capitalize;
+    height: 56px;
+    font-size: 24px;
+    line-height: 29px;
+    padding-right: 34px;
+  }
 }
 
 .login {
@@ -33,11 +59,11 @@ input {
   justify-content: center;
   margin-top: 229px;
   &__form {
+    position: relative;
     width: 480px;
     height: 330px;
-    padding: 25px 20px 95px;
+    padding: 41px 16px 89px 15px;
     display: flex;
-    gap: 25px;
     flex-direction: column;
     background: #ffffff;
     border: 5px solid #27569c;
@@ -51,6 +77,7 @@ input {
     color: #27569c;
     font-size: 24px;
     line-height: 29px;
+    margin-bottom: 4px;
   }
   &__form-label {
     width: 100%;
@@ -59,6 +86,9 @@ input {
     justify-content: space-between;
     font-size: 24px;
     line-height: 29px;
+    &:first-of-type {
+      margin-bottom: 25px;
+    }
   }
   &__form-input {
     height: 45px;
@@ -69,5 +99,178 @@ input {
     border-radius: 10px;
     font-size: 24px;
     line-height: 29px;
+    &::placeholder,
+    &:focus,
+    &:hover,
+    &:-webkit-autofill {
+      font-size: 24px;
+      line-height: 29px;
+    }
+  }
+  &__form-error {
+    position: absolute;
+    color: red;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+}
+
+.index {
+  display: grid;
+  padding: 20px 247px 90px;
+  grid-template: auto / 1fr 1fr;
+  justify-items: center;
+  gap: 20px 13px;
+}
+
+.post-item {
+  width: 467px;
+  height: 388px;
+  padding: 20px 15px 26px;
+  border: 5px solid #27569c;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  display: grid;
+  grid-template: 150px 62px auto / 150px auto;
+  column-gap: 30px;
+
+  font-size: 16px;
+  line-height: 19px;
+  &__author {
+    padding-top: 4px;
+    margin-bottom: 11px;
+  }
+  &__company {
+    padding-top: 9px;
+  }
+  &__title {
+    padding-top: 23px;
+    grid-column: 1 / 3;
+    font-size: 16px;
+    line-height: 19px;
+    height: 62px;
+  }
+  &__text {
+    padding-top: 42px;
+    grid-column: 1 / 3;
+  }
+}
+
+@media (max-width: 1245px) {
+  .login {
+    margin-top: 284px;
+    margin-left: 2px;
+  }
+  .post-item {
+    width: 325px;
+    height: 470px;
+    padding-bottom: 41px;
+    &__img {
+      padding-left: 4px;
+
+      grid-column: 1 / 3;
+    }
+
+    &__top {
+      padding-top: 20px;
+      padding-left: 5px;
+    }
+    &__author {
+      white-space: nowrap;
+      margin-bottom: 8px;
+    }
+    &__company {
+      white-space: nowrap;
+    }
+    &__title {
+      padding-top: 34px;
+      margin-bottom: 8px;
+      padding-left: 5px;
+    }
+    &__text {
+      padding-left: 5px;
+      padding-top: 23px;
+    }
+  }
+  .index {
+    padding: 25px 40px;
+    column-gap: 21px;
+  }
+}
+@media (max-width: 731px) {
+  .header {
+    padding-right: 6px;
+    padding-left: 15px;
+    &__logo {
+      width: 70px;
+      background-image: url("./images/logo-small.png");
+    }
+    &__username {
+      display: none;
+    }
+  }
+  .index {
+    padding: 8px 15px;
+    grid-template: auto / 1fr;
+    row-gap: 10px;
+  }
+  .post-item {
+    padding-top: 8px;
+    padding-left: 4px;
+    width: 292px;
+    height: 200px;
+    grid-template: 30px 30px auto / 1fr; 
+    gap: 26px;
+    &__img,
+    &__text {
+      display: none;
+    }
+    &__top{
+      padding-top: 0;
+    }
+    &__company{
+      padding-top: 19px;
+    }
+  }
+
+  .login {
+    margin-top: 0;
+    padding: 14px 15px;
+    &__form {
+      height: 301px;
+      padding-top: 21px;
+    }
+    &__form-title {
+      margin-bottom: 40px;
+    }
+    &__form-label {
+      flex-direction: column;
+      align-items: flex-start;
+      padding-left: 13px;
+      &:first-of-type {
+        margin-bottom: 15px;
+        .login__form-input {
+          margin-bottom: -7px;
+          margin-top: 18px;
+        }
+      }
+      &:last-of-type {
+        margin-top: 10px;
+        .login__form-input {
+          margin-top: 12px;
+          margin-bottom: -5px;
+          height: 33px;
+        }
+      }
+    }
+    &__form-input {
+      width: 212px;
+      height: 39px;
+      &:first-of-type {
+      }
+      &:last-of-type {
+      }
+    }
   }
 }
